cabal-version:      3.0

name:               aoc
version:            0.1.0.0

data-dir: data

common common-all
  default-language: Haskell2010
  ghc-options: -Wall

common common-exe
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

executable aoc
  import: common-all, common-exe
  main-is: Main.hs
  hs-source-dirs: src

  default-extensions:
    OverloadedStrings
    LambdaCase
    ScopedTypeVariables
    DuplicateRecordFields
    OverloadedRecordDot
    NoFieldSelectors
    NamedFieldPuns

  autogen-modules:
    Paths_aoc

  -- Modules included in this executable, other than Main.
  other-modules:
    Paths_aoc
    Utils.Grid
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12

  build-depends:
      base ^>=4.18 && < 5
    -- Package `hspec`: A Testing Framework for Haskell.
    , hspec ^>= 2.11.14
    -- Package `split`: Functions for splitting lists.
    , split ^>= 0.2.5
    -- Package `megaparsec`: Parser combinator library.
    , megaparsec ^>= 9.7.0
    -- -- Package `containers`: Brings maps, sets, trees, graphs, sequences.
    , containers ^>=0.7
    -- -- Package `unordered-containers`: Similar to `containers`, but optimized for performance.
    , unordered-containers ^>=0.2.20
    -- -- Package `vector`: Performant, fixed length arrays.
    , vector ^>=0.13.2.0
    -- -- Package `mtl`: Monad classes for transformers.
    , mtl ^>=2.3.1
